<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <LinearLayout
        android:id="@+id/toolbar_group_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_toolbar_settings"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:layout_marginEnd="6dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbar_settings"
            android:padding="@dimen/toolbar_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/setting" />

        <ImageButton
            android:id="@+id/button_toolbar_voice"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:layout_marginEnd="6dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbar_voice"
            android:padding="@dimen/toolbar_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/voice" />

        <ImageButton
            android:id="@+id/button_toolbar_emoji"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:layout_marginEnd="6dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbar_emoji"
            android:padding="@dimen/toolbar_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/emoji_icon" />

        <ImageButton
            android:id="@+id/button_toolbar_clipboard"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbar_clipboard"
            android:padding="@dimen/toolbar_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/clipboard" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/toolbar_group_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_toolbar_ai"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbar_ai_assistant"
            android:padding="@dimen/toolbar_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/chatgpt_icon" />

        <ImageButton
            android:id="@+id/button_toolbar_grammar"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbar_grammar"
            android:padding="@dimen/toolbar_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/grammar_icon" />

        <ImageButton
            android:id="@+id/button_toolbar_tone"
            android:layout_width="@dimen/toolbar_button_size"
            android:layout_height="@dimen/toolbar_button_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toolbar_tone"
            android:padding="@dimen/toolbar_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tone_icon" />
    </LinearLayout>

</LinearLayout>
